Pull request #63: deleted images for rc concern category page and fixed alignment of items
Merge in NRCSAPPS/cpdifrontend from story/CIGCPDPH2-1603-remove-the-default-image-and-fix-the-spacing-for-the-resource-concerns-on-the to develop

Squashed commit of the following:

commit 053dcede0d9753b174b13d0fde95960c670ff69b
Author: Bo Peng <Bo.Peng@usda.gov>
Date:   Thu Jan 25 17:21:23 2024 -0500

    deleted images for rc concern category page and fixed alignment of items

--- a/src/components/ResourceConcernCard/resource-concern-card.scss
+++ b/src/components/ResourceConcernCard/resource-concern-card.scss
@@ -2,7 +2,9 @@
 
 .heading {
   margin: 0 0 1em 0;
-
+  max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto;
   h2 {
     margin: 5rem 0 1.25rem 2.188rem;
   }
